--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ searchExamples:
 <section id="description" class="ui container">
   <div class="ui fluid centered stackable grid">
     <div class="five wide column">
-      <img src="{{ site.baseurl }}/img/Apigouv_visual.svg" alt="image of usage of the API" />
+      <img src="{{ site.baseurl }}/img/Apigouv_visual.svg" alt="Une API connecte des services à la puissance d'internet" />
     </div>
     <div class="six wide column">
       <h2>Pourquoi api.gouv ?</h2>
