--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@ searchExamples:
         Les API proposées vous permettent de&nbsp;:
       </p>
       <ul>
-        <li>simplifier les démarches d'un usager</li>
-        <li>guider l'usager dans la saisie d'informations</li>
-        <li>récupérer des informations que l'administration possède déjà</li>
-        <li>…à vous d'inventer la suite !</li>
+        <li>Simplifier les démarches.</li>
+        <li>Guider l'usager dans la saisie d'informations.</li>
+        <li>Récupérer des informations connues de l'administration.</li>
+        <li>À vous d'inventer la suite !</li>
       </ul>
       <ul class="link">
         <li>
